client02.yaml
kind: Pod
apiVersion: v1
metadata:
  name: client02
  namespace: test
  labels:
    run: client02
spec:
  containers:
  - name: busybox
    image: busybox
    resources:
      requests:
        cpu: "300m"
        memory: 128Mi
    args:
    - sleep
    - "10000"
