downgrade-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-obj-create
spec:
#  selector:
#    matchLabels:
#      app: nginx
#  replicas: 3 # tells deployment to run 2 pods matching the template
#  template:
#    metadata:
#      labels:
#        app: nginx
#    spec:
  containers:
  - name: nginx
    image: nginx:1.7.9
    ports:
    - containerPort: 80
