nginx.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx2
  labels:
     two: can-be-as-bad-as-one
spec:
  containers:
  - name: nginx
    image: nginx:1.7.9
    ports:
    - containerPort: 80
